--- a/viewer/index.html
+++ b/viewer/index.html
@@ -24,6 +24,8 @@
       --tab-active-text: #bfdbfe;
       --danger: #fca5a5;
       --overlay: rgba(0, 0, 0, 0.55);
+      --layout-left-pane: 48%;
+      --layout-splitter-size: 12px;
     }
 
     :root[data-theme="light"] {
@@ -61,9 +63,10 @@
     }
 
     .container {
-      max-width: 1200px;
-      margin: 0 auto;
-      padding: 24px;
+      width: 100%;
+      max-width: none;
+      margin: 0;
+      padding: 16px clamp(12px, 2vw, 24px);
       height: 100vh;
       display: flex;
       flex-direction: column;
@@ -159,10 +162,11 @@
 
     .layout {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 16px;
+      grid-template-columns: minmax(320px, var(--layout-left-pane)) var(--layout-splitter-size) minmax(320px, 1fr);
+      gap: 0;
       flex: 1;
       min-height: 0;
+      align-items: stretch;
     }
 
     .panel {
@@ -174,6 +178,44 @@
       display: flex;
       flex-direction: column;
       min-height: 0;
+      min-width: 0;
+    }
+
+    .splitter {
+      position: relative;
+      touch-action: none;
+      cursor: col-resize;
+      border-left: 4px solid transparent;
+      border-right: 4px solid transparent;
+      background-clip: padding-box;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .splitter::before {
+      content: "";
+      width: 3px;
+      height: min(72px, 40%);
+      border-radius: 999px;
+      background: var(--border);
+      transition: background 0.15s ease;
+    }
+
+    .splitter:hover::before,
+    .splitter:focus-visible::before,
+    .layout.is-resizing .splitter::before {
+      background: var(--accent);
+    }
+
+    .splitter:focus-visible {
+      outline: none;
+    }
+
+    .layout.is-resizing,
+    .layout.is-resizing * {
+      cursor: col-resize !important;
+      user-select: none;
     }
 
     .panel-header {
@@ -534,6 +576,21 @@
     #jsonModal {
       z-index: 1100;
     }
+
+    @media (max-width: 980px) {
+      .container {
+        padding: 12px;
+      }
+
+      .layout {
+        grid-template-columns: 1fr;
+        gap: 12px;
+      }
+
+      .splitter {
+        display: none;
+      }
+    }
   </style>
 </head>
 <body>
@@ -565,7 +622,7 @@
       <span class="muted hint">Tip: click “Code” on a card to select the corresponding lines in the input; click “JSON” to inspect the raw object.</span>
     </div>
 
-    <div class="layout">
+    <div class="layout" id="mainLayout">
       <div class="panel">
         <h2>Input (ABAP / JSON)</h2>
         <div class="input-editor" id="inputEditor">
@@ -574,6 +631,15 @@
         </div>
         <div class="error" id="error"></div>
       </div>
+
+      <div
+        class="splitter"
+        id="panelSplitter"
+        role="separator"
+        aria-label="Resize code and output panels"
+        aria-orientation="vertical"
+        tabindex="0"
+      ></div>
 
       <div class="panel">
         <div class="panel-header">
