--- a/viewer/index.inline.html
+++ b/viewer/index.inline.html
@@ -30,6 +30,8 @@
       --tab-active-text: #bfdbfe;
       --danger: #fca5a5;
       --overlay: rgba(0, 0, 0, 0.55);
+      --layout-left-pane: 48%;
+      --layout-splitter-size: 12px;
     }
 
     :root[data-theme="light"] {
@@ -67,9 +69,10 @@
     }
 
     .container {
-      max-width: 1200px;
-      margin: 0 auto;
-      padding: 24px;
+      width: 100%;
+      max-width: none;
+      margin: 0;
+      padding: 16px clamp(12px, 2vw, 24px);
       height: 100vh;
       display: flex;
       flex-direction: column;
@@ -165,10 +168,11 @@
 
     .layout {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 16px;
+      grid-template-columns: minmax(320px, var(--layout-left-pane)) var(--layout-splitter-size) minmax(320px, 1fr);
+      gap: 0;
       flex: 1;
       min-height: 0;
+      align-items: stretch;
     }
 
     .panel {
@@ -180,6 +184,44 @@
       display: flex;
       flex-direction: column;
       min-height: 0;
+      min-width: 0;
+    }
+
+    .splitter {
+      position: relative;
+      touch-action: none;
+      cursor: col-resize;
+      border-left: 4px solid transparent;
+      border-right: 4px solid transparent;
+      background-clip: padding-box;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .splitter::before {
+      content: "";
+      width: 3px;
+      height: min(72px, 40%);
+      border-radius: 999px;
+      background: var(--border);
+      transition: background 0.15s ease;
+    }
+
+    .splitter:hover::before,
+    .splitter:focus-visible::before,
+    .layout.is-resizing .splitter::before {
+      background: var(--accent);
+    }
+
+    .splitter:focus-visible {
+      outline: none;
+    }
+
+    .layout.is-resizing,
+    .layout.is-resizing * {
+      cursor: col-resize !important;
+      user-select: none;
     }
 
     .panel-header {
@@ -540,6 +582,21 @@
     #jsonModal {
       z-index: 1100;
     }
+
+    @media (max-width: 980px) {
+      .container {
+        padding: 12px;
+      }
+
+      .layout {
+        grid-template-columns: 1fr;
+        gap: 12px;
+      }
+
+      .splitter {
+        display: none;
+      }
+    }
   </style>
 </head>
 <body>
@@ -571,7 +628,7 @@
       <span class="muted hint">Tip: click “Code” on a card to select the corresponding lines in the input; click “JSON” to inspect the raw object.</span>
     </div>
 
-    <div class="layout">
+    <div class="layout" id="mainLayout">
       <div class="panel">
         <h2>Input (ABAP / JSON)</h2>
         <div class="input-editor" id="inputEditor">
@@ -580,6 +637,15 @@
         </div>
         <div class="error" id="error"></div>
       </div>
+
+      <div
+        class="splitter"
+        id="panelSplitter"
+        role="separator"
+        aria-label="Resize code and output panels"
+        aria-orientation="vertical"
+        tabindex="0"
+      ></div>
 
       <div class="panel">
         <div class="panel-header">
@@ -1334,6 +1400,10 @@
       return buildPerformCallExtras(context);
     }
 
+    if (extrasConfig.type === "ifCondition") {
+      return buildIfConditionExtras(context);
+    }
+
     if (extrasConfig.type === "readTable") {
       return buildReadTableExtras(context);
     }
@@ -1456,6 +1526,18 @@
         using: parseArgumentTokens(map.usingRaw || "").map((value) => ({ value })),
         changing: parseArgumentTokens(map.changingRaw || "").map((value) => ({ value })),
         tables: parseArgumentTokens(map.tablesRaw || "").map((value) => ({ value }))
+      }
+    };
+  }
+
+  function buildIfConditionExtras({ values }) {
+    const map = valuesToFirstValueMap(values);
+    const conditionRaw = map.condition || "";
+
+    return {
+      ifCondition: {
+        conditionRaw,
+        conditions: parseConditionClauses(conditionRaw)
       }
     };
   }
@@ -2713,6 +2795,10 @@
       annotatePerformCallExtras(extras.performCall, context);
     }
 
+    if (extras.ifCondition) {
+      annotateIfConditionExtras(extras.ifCondition, context);
+    }
+
     if (extras.readTable) {
       annotateReadTableExtras(extras.readTable, context);
     }
@@ -2779,6 +2865,13 @@
         entry.valueDecl = resolveDecl(ref, context);
       }
     }
+  }
+
+  function annotateIfConditionExtras(ifCondition, context) {
+    if (!ifCondition || typeof ifCondition !== "object") {
+      return;
+    }
+    annotateConditionClausesWithDecls(ifCondition.conditions, context);
   }
 
   function annotateConditionClausesWithDecls(conditions, context) {
@@ -5121,6 +5214,9 @@
     "match": {
       "startKeyword": "ELSEIF"
     },
+    "extras": {
+      "type": "ifCondition"
+    },
     "keywordLabels": {
       "ELSEIF": "stmt",
       "AND": "and",
@@ -5331,6 +5427,9 @@
     "object": "IF",
     "match": {
       "startKeyword": "IF"
+    },
+    "extras": {
+      "type": "ifCondition"
     },
     "block": {
       "endKeyword": "ENDIF"
@@ -6812,6 +6911,8 @@
     inputText: document.getElementById("inputText"),
     inputGutter: document.getElementById("inputGutter"),
     inputGutterContent: document.getElementById("inputGutterContent"),
+    mainLayout: document.getElementById("mainLayout"),
+    panelSplitter: document.getElementById("panelSplitter"),
     output: document.getElementById("output"),
     rightPanelTitle: document.getElementById("rightPanelTitle"),
     rightTabOutputBtn: document.getElementById("rightTabOutputBtn"),
@@ -6886,7 +6987,8 @@
     inputLineOffsets: [],
     customRules: [],
     activeRuleId: "",
-    settings: null
+    settings: null,
+    layoutLeftPane: 48
   };
 
   const DESC_STORAGE_KEY_V2 = "abap-parser-viewer.declDescOverrides.v2";
@@ -6894,6 +6996,11 @@
   const RULES_STORAGE_KEY_V1 = "abap-parser-viewer.customConfigs.v1";
   const SETTINGS_STORAGE_KEY_V1 = "abap-parser-viewer.settings.v1";
   const THEME_STORAGE_KEY_V1 = "abap-parser-viewer.theme.v1";
+  const LAYOUT_SPLIT_STORAGE_KEY_V1 = "abap-parser-viewer.layoutSplit.v1";
+  const LAYOUT_SPLIT_DEFAULT = 48;
+  const LAYOUT_SPLIT_MIN = 28;
+  const LAYOUT_SPLIT_MAX = 72;
+  const MOBILE_LAYOUT_QUERY = "(max-width: 980px)";
 
   const DECL_TYPE_OPTIONS = [
     "DATA",
@@ -7176,6 +7283,172 @@
     } catch {
       // ignore
     }
+  }
+
+  function clampNumber(value, min, max) {
+    return Math.min(max, Math.max(min, value));
+  }
+
+  function normalizeLayoutSplit(value) {
+    const numeric = Number(value);
+    if (!Number.isFinite(numeric)) {
+      return LAYOUT_SPLIT_DEFAULT;
+    }
+    return clampNumber(numeric, LAYOUT_SPLIT_MIN, LAYOUT_SPLIT_MAX);
+  }
+
+  function loadLayoutSplit() {
+    try {
+      return normalizeLayoutSplit(localStorage.getItem(LAYOUT_SPLIT_STORAGE_KEY_V1));
+    } catch {
+      return LAYOUT_SPLIT_DEFAULT;
+    }
+  }
+
+  function saveLayoutSplit(value) {
+    try {
+      localStorage.setItem(LAYOUT_SPLIT_STORAGE_KEY_V1, String(normalizeLayoutSplit(value)));
+    } catch {
+      // ignore
+    }
+  }
+
+  function updateSplitterAria(leftPercent) {
+    if (!els.panelSplitter) {
+      return;
+    }
+
+    const left = Math.round(leftPercent);
+    const right = Math.round(100 - leftPercent);
+    els.panelSplitter.setAttribute("aria-valuemin", String(LAYOUT_SPLIT_MIN));
+    els.panelSplitter.setAttribute("aria-valuemax", String(LAYOUT_SPLIT_MAX));
+    els.panelSplitter.setAttribute("aria-valuenow", String(left));
+    els.panelSplitter.setAttribute("aria-valuetext", `${left}% code, ${right}% output`);
+  }
+
+  function applyLayoutSplit(nextPercent, { save } = {}) {
+    const normalized = normalizeLayoutSplit(nextPercent);
+    state.layoutLeftPane = normalized;
+    document.documentElement.style.setProperty("--layout-left-pane", `${normalized}%`);
+    updateSplitterAria(normalized);
+
+    if (save === false) {
+      return;
+    }
+
+    saveLayoutSplit(normalized);
+  }
+
+  function isCompactLayout() {
+    if (typeof window.matchMedia === "function") {
+      return window.matchMedia(MOBILE_LAYOUT_QUERY).matches;
+    }
+    return window.innerWidth <= 980;
+  }
+
+  function setLayoutResizing(active) {
+    if (!els.mainLayout) {
+      return;
+    }
+    els.mainLayout.classList.toggle("is-resizing", Boolean(active));
+  }
+
+  function initLayoutSplitter() {
+    applyLayoutSplit(loadLayoutSplit(), { save: false });
+
+    if (!els.mainLayout || !els.panelSplitter) {
+      return;
+    }
+
+    let dragging = false;
+    let activePointerId = null;
+
+    function applySplitFromClientX(clientX) {
+      const layoutRect = els.mainLayout.getBoundingClientRect();
+      const splitterRect = els.panelSplitter.getBoundingClientRect();
+      const usableWidth = layoutRect.width - splitterRect.width;
+      if (usableWidth <= 0) {
+        return;
+      }
+
+      const leftWidth = clientX - layoutRect.left - (splitterRect.width / 2);
+      const leftPercent = (leftWidth / usableWidth) * 100;
+      applyLayoutSplit(leftPercent, { save: false });
+    }
+
+    function onPointerMove(ev) {
+      if (!dragging || isCompactLayout()) {
+        return;
+      }
+      applySplitFromClientX(ev.clientX);
+      ev.preventDefault();
+    }
+
+    function stopDragging() {
+      if (!dragging) {
+        return;
+      }
+      dragging = false;
+      setLayoutResizing(false);
+      if (activePointerId !== null && typeof els.panelSplitter.releasePointerCapture === "function") {
+        try {
+          els.panelSplitter.releasePointerCapture(activePointerId);
+        } catch {
+          // ignore
+        }
+      }
+      activePointerId = null;
+      saveLayoutSplit(state.layoutLeftPane);
+      window.removeEventListener("pointermove", onPointerMove);
+      window.removeEventListener("pointerup", stopDragging);
+      window.removeEventListener("pointercancel", stopDragging);
+    }
+
+    els.panelSplitter.addEventListener("pointerdown", (ev) => {
+      if (ev.button !== 0 || isCompactLayout()) {
+        return;
+      }
+
+      dragging = true;
+      activePointerId = ev.pointerId;
+      setLayoutResizing(true);
+
+      if (typeof els.panelSplitter.setPointerCapture === "function") {
+        try {
+          els.panelSplitter.setPointerCapture(ev.pointerId);
+        } catch {
+          // ignore
+        }
+      }
+
+      applySplitFromClientX(ev.clientX);
+      window.addEventListener("pointermove", onPointerMove);
+      window.addEventListener("pointerup", stopDragging);
+      window.addEventListener("pointercancel", stopDragging);
+      ev.preventDefault();
+    });
+
+    els.panelSplitter.addEventListener("keydown", (ev) => {
+      if (isCompactLayout()) {
+        return;
+      }
+      if (ev.key !== "ArrowLeft" && ev.key !== "ArrowRight") {
+        return;
+      }
+
+      const step = ev.shiftKey ? 5 : 2;
+      const delta = ev.key === "ArrowRight" ? step : -step;
+      applyLayoutSplit(state.layoutLeftPane + delta);
+      ev.preventDefault();
+    });
+
+    window.addEventListener("resize", () => {
+      if (isCompactLayout()) {
+        setLayoutResizing(false);
+        return;
+      }
+      applyLayoutSplit(state.layoutLeftPane, { save: false });
+    });
   }
 
   function validateRuleConfig(config) {
@@ -10405,6 +10678,7 @@
     state.customRules = loadCustomRules();
     state.settings = loadSettings();
     applyTheme(loadTheme(), { save: false });
+    initLayoutSplitter();
 
     if (els.inputText && !els.inputText.value.trim()) {
       els.inputText.value = SAMPLE_ABAP;
