feat(scripts): inject build metadata into inline viewer
This change updates the build script and enhances the ABAP parser tests:

- Modified `scripts/build-inline-viewer.py` to collect build-time information, including the current UTC timestamp, source file modification time, and Git commit metadata (hash and date).
- The collected info is injected into the generated HTML as a JSON object assigned to `window.ABAP_VIEWER_BUILD_INFO` for better traceability of the build artifact.
- Added test coverage for the ABAP parser to verify correct handling of `IS INITIAL` and `IS NOT INITIAL` patterns within `IF` conditions and `READ TABLE` keys.

--- a/viewer/index.html
+++ b/viewer/index.html
@@ -87,6 +87,13 @@
       color: var(--muted);
     }
 
+    header .build-info {
+      margin-top: 6px;
+      font-size: 12px;
+      color: var(--muted);
+      font-family: Consolas, "Courier New", monospace;
+    }
+
     .controls {
       display: flex;
       flex-wrap: wrap;
@@ -598,6 +605,7 @@
     <header>
       <h1>ABAP Parser Viewer</h1>
       <p>Paste ABAP code (or JSON output) and click Render.</p>
+      <p class="build-info" id="buildInfo">Updated: checking...</p>
     </header>
 
     <div class="controls">
