refactor: remove automatic build info injection
This change removes the logic in the build script that automatically extracted Git commit data and build timestamps to inject them into the HTML via a script tag.

- Modified `scripts/build-inline-viewer.py` to remove subprocess calls to Git and datetime processing.
- Updated `viewer/app.js` to retrieve update information from HTML `<meta>` tags instead of the `window.ABAP_VIEWER_BUILD_INFO` object.
- Simplified the build process by reducing dependencies and decoupling metadata generation from the inlining script.

--- a/viewer/index.html
+++ b/viewer/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="abap-viewer-updated-at" content="2026-02-24 11:50:00">
+  <meta name="abap-viewer-updated-note" content="Manual timestamp. Update this value by hand when code changes.">
   <title>ABAP Parser Viewer</title>
   <style>
     :root {
@@ -605,7 +607,7 @@
     <header>
       <h1>ABAP Parser Viewer</h1>
       <p>Paste ABAP code (or JSON output) and click Render.</p>
-      <p class="build-info" id="buildInfo">Updated: checking...</p>
+      <p class="build-info" id="buildInfo">Updated: manual timestamp not set.</p>
     </header>
 
     <div class="controls">
