feat(viewer): implement structured condition tables for ABAP statements
- Added `renderConditionTable` and `appendConditionSection` helper functions to display logical conditions in a structured table format.
- Integrated the new table rendering for SELECT (WHERE/HAVING), READ TABLE, LOOP AT, MODIFY, and IF statements to show detailed operand and declaration information.
- Changed the default state of `showExtras` to false.
- Improved the visualization of complex logical clauses by moving beyond simple raw text displays to informative tables.

--- a/viewer/index.html
+++ b/viewer/index.html
@@ -620,7 +620,7 @@
       <label class="toggle"><input type="checkbox" id="showRaw" checked>raw</label>
       <label class="toggle"><input type="checkbox" id="showKeywords" checked>keywords</label>
       <label class="toggle"><input type="checkbox" id="showValues" checked>values</label>
-      <label class="toggle"><input type="checkbox" id="showExtras" checked>extras</label>
+      <label class="toggle"><input type="checkbox" id="showExtras">extras</label>
       <label class="toggle"><input type="checkbox" id="themeToggle" checked>dark</label>
       <button type="button" id="expandAllBtn" class="secondary">Expand all</button>
       <button type="button" id="collapseAllBtn" class="secondary">Collapse all</button>
