refactor(parser): control implicit AND behavior in condition parsing
Update the `parseConditionClauses` function to accept an options object that controls whether implicit "AND" logic is applied. This change allows for more accurate parsing of different ABAP statement types:

- Disabled implicit AND for `IF`, `CHECK`, `SELECT` (WHERE/HAVING), `LOOP`, and `DELETE` statements where explicit operators are expected.
- Enabled implicit AND for `READ TABLE ... WITH KEY` statements to correctly handle multiple key-value pairs.

Additionally, updated the build information display in the UI to include the version number retrieved from the `abap-viewer-version` meta tag.

--- a/viewer/index.inline.html
+++ b/viewer/index.inline.html
@@ -9,8 +9,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="abap-viewer-updated-at" content="2026-02-24 11:50:00">
-  <meta name="abap-viewer-updated-note" content="Manual timestamp. Update this value by hand when code changes.">
+  <meta name="abap-viewer-version" content="v2026.02.25-r1">
+  <meta name="abap-viewer-updated-at" content="2026-02-25 10:30:00">
+  <meta name="abap-viewer-updated-note" content="Manual version/timestamp. Update these meta values by hand when code changes. Offline only.">
   <title>ABAP Parser Viewer</title>
   <style>
     :root {
@@ -1538,7 +1539,7 @@
         form: map.form || "",
         program: map.program || "",
         ifCondition,
-        ifConditions: parseConditionClauses(ifCondition),
+        ifConditions: parseConditionClauses(ifCondition, { allowImplicitAnd: false }),
         using: parseArgumentTokens(map.usingRaw || "").map((value) => ({ value })),
         changing: parseArgumentTokens(map.changingRaw || "").map((value) => ({ value })),
         tables: parseArgumentTokens(map.tablesRaw || "").map((value) => ({ value }))
@@ -1553,7 +1554,7 @@
     return {
       ifCondition: {
         conditionRaw,
-        conditions: parseConditionClauses(conditionRaw)
+        conditions: parseConditionClauses(conditionRaw, { allowImplicitAnd: false })
       }
     };
   }
@@ -1566,9 +1567,9 @@
     return {
       select: {
         whereRaw,
-        whereConditions: parseConditionClauses(whereRaw),
+        whereConditions: parseConditionClauses(whereRaw, { allowImplicitAnd: false }),
         havingRaw,
-        havingConditions: parseConditionClauses(havingRaw)
+        havingConditions: parseConditionClauses(havingRaw, { allowImplicitAnd: false })
       }
     };
   }
@@ -1590,7 +1591,7 @@
         refInto: map.refInto || "",
         withKeyRaw,
         withTableKeyRaw,
-        conditions: parseConditionClauses(conditionSource)
+        conditions: parseConditionClauses(conditionSource, { allowImplicitAnd: true })
       }
     };
   }
@@ -1608,7 +1609,7 @@
         from: map.from || "",
         to: map.to || "",
         whereRaw,
-        conditions: parseConditionClauses(whereRaw)
+        conditions: parseConditionClauses(whereRaw, { allowImplicitAnd: false })
       }
     };
   }
@@ -1624,7 +1625,7 @@
         index: map.index || "",
         transporting: map.transporting || "",
         whereRaw,
-        conditions: parseConditionClauses(whereRaw)
+        conditions: parseConditionClauses(whereRaw, { allowImplicitAnd: false })
       }
     };
   }
@@ -1639,7 +1640,7 @@
         from: map.from || "",
         index: map.index || "",
         whereRaw,
-        conditions: parseConditionClauses(whereRaw)
+        conditions: parseConditionClauses(whereRaw, { allowImplicitAnd: false })
       }
     };
   }
@@ -3171,12 +3172,13 @@
     return String(match[1] || "").trim();
   }
 
-  function parseConditionClauses(segmentRaw) {
+  function parseConditionClauses(segmentRaw, options) {
     const raw = String(segmentRaw || "").trim();
     if (!raw) {
       return [];
     }
 
+    const allowImplicitAnd = !options || options.allowImplicitAnd !== false;
     const tokens = tokenize(`${raw}.`);
     if (!tokens.length) {
       return [];
@@ -3237,7 +3239,7 @@
         }
 
         const next = tokens[i + 1];
-        if (i > rightStart && next && isConditionOperator(next.upper)) {
+        if (allowImplicitAnd && i > rightStart && next && isConditionOperator(next.upper)) {
           implicitNextClauseIndex = i;
           rightEnd = i - 1;
           break;
@@ -7211,14 +7213,17 @@
       return;
     }
 
+    const manualVersion = getMetaContent("abap-viewer-version");
     const manualUpdatedAt = getMetaContent("abap-viewer-updated-at");
     const manualNote = getMetaContent("abap-viewer-updated-note");
     const parsedManualDate = parseDateCandidate(manualUpdatedAt);
     const fallbackDate = parseDateCandidate(document.lastModified);
+    const versionPrefix = manualVersion ? `${manualVersion} | ` : "";
 
-    if (manualUpdatedAt) {
+    if (manualUpdatedAt || manualVersion) {
       const display = parsedManualDate ? formatDateTime(parsedManualDate) : manualUpdatedAt;
-      els.buildInfo.textContent = `Updated: ${display} (manual)`;
+      const updatedText = display || "manual timestamp not set";
+      els.buildInfo.textContent = `Updated: ${versionPrefix}${updatedText} (manual)`;
       els.buildInfo.title = manualNote || "Manual timestamp from <meta name=\"abap-viewer-updated-at\">.";
       return;
     }
@@ -8097,6 +8102,42 @@
     els.settingsModal.hidden = true;
   }
 
+  function collectConditionDeclsFromClauses(clauses, addDecl) {
+    const list = Array.isArray(clauses) ? clauses : [];
+    for (const clause of list) {
+      if (!clause || typeof clause !== "object") {
+        continue;
+      }
+      addDecl(clause.leftOperandDecl);
+      addDecl(clause.rightOperandDecl);
+    }
+  }
+
+  function collectConditionDeclsFromExtras(extras, addDecl) {
+    if (!extras || typeof extras !== "object" || typeof addDecl !== "function") {
+      return;
+    }
+
+    if (extras.ifCondition) {
+      collectConditionDeclsFromClauses(extras.ifCondition.conditions, addDecl);
+    }
+
+    if (extras.performCall) {
+      collectConditionDeclsFromClauses(extras.performCall.ifConditions, addDecl);
+    }
+
+    if (extras.select) {
+      collectConditionDeclsFromClauses(extras.select.whereConditions, addDecl);
+      collectConditionDeclsFromClauses(extras.select.havingConditions, addDecl);
+    }
+
+    for (const key of ["readTable", "loopAtItab", "modifyItab", "deleteItab"]) {
+      if (extras[key]) {
+        collectConditionDeclsFromClauses(extras[key].conditions, addDecl);
+      }
+    }
+  }
+
   function getDeclsForDescriptionsModal() {
     if (state.data && typeof state.data === "object" && Array.isArray(state.data.decls)) {
       return state.data.decls;
@@ -8109,7 +8150,7 @@
       if (!decl || typeof decl !== "object") {
         return;
       }
-      const key = getDeclKey(decl) || stringifyDecl(decl);
+      const key = getDeclOverrideStorageKey(decl) || stringifyDecl(decl);
       if (!key || seen.has(key)) {
         return;
       }
@@ -8169,6 +8210,8 @@
           }
         }
       }
+
+      collectConditionDeclsFromExtras(extras, addDecl);
     });
 
     return decls;
@@ -8422,7 +8465,7 @@
     const tbody = document.createElement("tbody");
     for (const row of rows) {
       const tr = document.createElement("tr");
-      const declKey = getDeclKey(row.decl);
+      const declKey = getDeclOverrideStorageKey(row.decl);
       if (declKey) {
         tr.setAttribute("data-decl-key", declKey);
         if (declKey === state.selectedDeclKey) {
@@ -8609,6 +8652,22 @@
     return String(value || "").trim().toUpperCase();
   }
 
+  function getDeclFallbackKey(decl) {
+    if (!decl || typeof decl !== "object") {
+      return "";
+    }
+
+    const name = normalizeKeyToken(decl.name);
+    if (!name) {
+      return "";
+    }
+
+    const objectType = normalizeKeyToken(decl.objectType);
+    const file = String(decl.file || "").trim();
+    const line = decl.lineStart ? String(decl.lineStart) : "";
+    return `FALLBACK:${objectType}|${name}|${file}|${line}`;
+  }
+
   function getDeclKey(decl) {
     if (!decl || typeof decl !== "object") {
       return "";
@@ -8639,6 +8698,27 @@
     return `${type}:NAME:${name}`;
   }
 
+  function getDeclOverrideLookupKeys(decl) {
+    const keys = [];
+    const pushKey = (value) => {
+      const key = String(value || "").trim();
+      if (!key || keys.includes(key)) {
+        return;
+      }
+      keys.push(key);
+    };
+
+    pushKey(getDeclKey(decl));
+    pushKey(getLegacyDeclKey(decl));
+    pushKey(getDeclFallbackKey(decl));
+    return keys;
+  }
+
+  function getDeclOverrideStorageKey(decl) {
+    const keys = getDeclOverrideLookupKeys(decl);
+    return keys.length ? keys[0] : "";
+  }
+
   function normalizeDescOverrideEntry(value) {
     if (typeof value === "string") {
       return { text: String(value || ""), noNormalize: false };
@@ -8660,9 +8740,11 @@
   }
 
   function getDeclOverrideEntry(decl) {
-    const key = getDeclKey(decl);
-    if (key && Object.prototype.hasOwnProperty.call(state.descOverrides || {}, key)) {
-      return normalizeDescOverrideEntry(state.descOverrides[key]);
+    const keys = getDeclOverrideLookupKeys(decl);
+    for (const key of keys) {
+      if (key && Object.prototype.hasOwnProperty.call(state.descOverrides || {}, key)) {
+        return normalizeDescOverrideEntry(state.descOverrides[key]);
+      }
     }
 
     const legacyKey = getLegacyDeclKey(decl);
@@ -9086,13 +9168,13 @@
   }
 
   function editDeclDesc(decl) {
-    if (!decl || !decl.name || !decl.objectType) {
+    if (!decl || !decl.name) {
       return;
     }
 
     const isStructField = isStructFieldDecl(decl);
 
-    const key = getDeclKey(decl);
+    const key = getDeclOverrideStorageKey(decl);
     if (!key) {
       return;
     }
@@ -9133,7 +9215,7 @@
       openEditModal({
         mode: "single",
         key,
-        label: `${decl.objectType} ${getDeclTechName(decl)}`,
+        label: `${decl.objectType || "DECL"} ${getDeclTechName(decl)}`,
         hint: hintParts.join(" • "),
         initialValue: currentDisplay || effective,
         skipNormalize: Boolean(currentEntry.noNormalize)
@@ -9142,7 +9224,7 @@
     }
 
     const structDecl = buildStructDeclFromFieldDecl(decl);
-    const structKey = structDecl ? getDeclKey(structDecl) : "";
+    const structKey = structDecl ? getDeclOverrideStorageKey(structDecl) : "";
     if (!structKey) {
       return;
     }
@@ -9161,7 +9243,7 @@
       mode: "structField",
       structKey,
       itemKey: key,
-      label: `${decl.objectType} ${getDeclTechName(decl)}`,
+      label: `${decl.objectType || "DECL"} ${getDeclTechName(decl)}`,
       hint: hintParts.join(" • "),
       structValue: structCurrentDisplay || structEffective,
       itemValue: currentDisplay || getEffectiveDeclAtomicDescNormalized(decl),
@@ -9767,10 +9849,12 @@
       }
     }
 
+    collectConditionDeclsFromExtras(extras, addDecl);
+
     const seen = new Set();
     const parts = [];
     for (const decl of decls) {
-      const key = getDeclKey(decl) || stringifyDecl(decl);
+      const key = getDeclOverrideStorageKey(decl) || stringifyDecl(decl);
       if (!key || seen.has(key)) {
         continue;
       }
@@ -10283,7 +10367,7 @@
     const wrap = el("div", { className: "decl-desc" });
     wrap.appendChild(el("div", { className: "decl-desc-text", text: text || "" }));
 
-    if (decl && decl.name && decl.objectType) {
+    if (getDeclOverrideStorageKey(decl)) {
       const btn = el("button", {
         className: "icon-btn",
         text: "✎",
@@ -10400,7 +10484,7 @@
       }
       descLineWrap.appendChild(descLineText);
 
-      if (decl && decl.name && decl.objectType) {
+      if (getDeclOverrideStorageKey(decl)) {
         const btn = el("button", {
           className: "icon-btn",
           text: "✎",
@@ -10493,6 +10577,52 @@
     return wrap;
   }
 
+  function collectDeclsForValueEntry(obj, entry) {
+    const decls = [];
+    const addDecl = (decl) => {
+      if (decl && typeof decl === "object") {
+        decls.push(decl);
+      }
+    };
+
+    addDecl(entry && entry.decl);
+
+    const extras = obj && obj.extras && typeof obj.extras === "object" ? obj.extras : null;
+    if (!extras) {
+      return dedupeDecls(decls);
+    }
+
+    const entryName = String(entry && entry.name ? entry.name : "").trim().toLowerCase();
+    if (!entryName) {
+      return dedupeDecls(decls);
+    }
+
+    if (entryName === "condition" && extras.ifCondition) {
+      collectConditionDeclsFromClauses(extras.ifCondition.conditions, addDecl);
+    } else if (entryName === "ifcondition" && extras.performCall) {
+      collectConditionDeclsFromClauses(extras.performCall.ifConditions, addDecl);
+    } else if (entryName === "where") {
+      if (extras.select) {
+        collectConditionDeclsFromClauses(extras.select.whereConditions, addDecl);
+      }
+      if (extras.loopAtItab) {
+        collectConditionDeclsFromClauses(extras.loopAtItab.conditions, addDecl);
+      }
+      if (extras.modifyItab) {
+        collectConditionDeclsFromClauses(extras.modifyItab.conditions, addDecl);
+      }
+      if (extras.deleteItab) {
+        collectConditionDeclsFromClauses(extras.deleteItab.conditions, addDecl);
+      }
+    } else if (entryName === "having" && extras.select) {
+      collectConditionDeclsFromClauses(extras.select.havingConditions, addDecl);
+    } else if ((entryName === "withkey" || entryName === "withtablekey") && extras.readTable) {
+      collectConditionDeclsFromClauses(extras.readTable.conditions, addDecl);
+    }
+
+    return dedupeDecls(decls);
+  }
+
   function renderValues(obj) {
     const values = getValueEntries(obj);
     if (!values.length) {
@@ -10511,12 +10641,17 @@
     const tbody = el("tbody");
     for (const entry of values) {
       const row = el("tr");
+      const relatedDecls = collectDeclsForValueEntry(obj, entry);
+      const declListCells = renderDeclListCells(
+        relatedDecls.length ? relatedDecls : null,
+        relatedDecls.length ? null : entry && entry.decl
+      );
       row.appendChild(el("td", { text: entry && entry.name ? String(entry.name) : "" }));
       row.appendChild(el("td", { text: entry && entry.value ? String(entry.value) : "" }));
       row.appendChild(el("td", { text: entry && entry.label ? String(entry.label) : "" }));
       row.appendChild(el("td", { text: entry && entry.codeDesc ? String(entry.codeDesc) : "" }));
-      row.appendChild(renderDeclNameCell(entry && entry.decl));
-      row.appendChild(renderDeclDescCell(entry && entry.decl));
+      row.appendChild(declListCells.nameCell);
+      row.appendChild(declListCells.descCell);
       tbody.appendChild(row);
     }
     table.appendChild(tbody);
@@ -10590,6 +10725,47 @@
     return section;
   }
 
+  function resolveConditionDeclForViewer(decl, refCandidate) {
+    if (decl && typeof decl === "object") {
+      return decl;
+    }
+
+    const ref = String(refCandidate || "").trim();
+    if (!ref) {
+      return null;
+    }
+
+    const decls = state.data && typeof state.data === "object" && Array.isArray(state.data.decls)
+      ? state.data.decls
+      : [];
+    if (!decls.length) {
+      return null;
+    }
+
+    const upperRef = ref.toUpperCase();
+    let matched = null;
+    for (const candidate of decls) {
+      if (!candidate || typeof candidate !== "object") {
+        continue;
+      }
+      const nameUpper = String(candidate.name || "").trim().toUpperCase();
+      if (!nameUpper || nameUpper !== upperRef) {
+        continue;
+      }
+
+      if (!matched) {
+        matched = candidate;
+      }
+
+      const scopeUpper = String(candidate.scopeLabel || "").trim().toUpperCase();
+      if (scopeUpper === "GLOBAL") {
+        return candidate;
+      }
+    }
+
+    return matched;
+  }
+
   function renderConditionTable(title, clauses) {
     const items = Array.isArray(clauses) ? clauses : [];
     if (!items.length) {
@@ -10624,18 +10800,29 @@
     const tbody = el("tbody");
     for (const clause of items) {
       const row = el("tr");
+      const leftRef = clause && clause.leftOperandRef ? String(clause.leftOperandRef) : "";
+      const rightRef = clause && clause.rightOperandRef ? String(clause.rightOperandRef) : "";
+      const leftDecl = resolveConditionDeclForViewer(
+        clause && clause.leftOperandDecl ? clause.leftOperandDecl : null,
+        leftRef || (clause && clause.leftOperand ? clause.leftOperand : "")
+      );
+      const rightDecl = resolveConditionDeclForViewer(
+        clause && clause.rightOperandDecl ? clause.rightOperandDecl : null,
+        rightRef || (clause && clause.rightOperand ? clause.rightOperand : "")
+      );
+
       row.appendChild(el("td", { text: clause && clause.leftOperand ? String(clause.leftOperand) : "" }));
       row.appendChild(el("td", { text: clause && clause.comparisonOperator ? String(clause.comparisonOperator) : "" }));
       row.appendChild(el("td", { text: clause && clause.rightOperand ? String(clause.rightOperand) : "" }));
       row.appendChild(el("td", { text: clause && clause.logicalConnector ? String(clause.logicalConnector) : "" }));
-      row.appendChild(el("td", { text: clause && clause.leftOperandRef ? String(clause.leftOperandRef) : "" }));
+      row.appendChild(el("td", { text: leftRef }));
 
-      const leftDeclCells = renderDeclListCells(null, clause && clause.leftOperandDecl ? clause.leftOperandDecl : null);
+      const leftDeclCells = renderDeclListCells(null, leftDecl);
       row.appendChild(leftDeclCells.nameCell);
       row.appendChild(leftDeclCells.descCell);
 
-      row.appendChild(el("td", { text: clause && clause.rightOperandRef ? String(clause.rightOperandRef) : "" }));
-      const rightDeclCells = renderDeclListCells(null, clause && clause.rightOperandDecl ? clause.rightOperandDecl : null);
+      row.appendChild(el("td", { text: rightRef }));
+      const rightDeclCells = renderDeclListCells(null, rightDecl);
       row.appendChild(rightDeclCells.nameCell);
       row.appendChild(rightDeclCells.descCell);
 
