--- a/viewer/index.html
+++ b/viewer/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="abap-viewer-updated-at" content="2026-02-24 11:50:00">
-  <meta name="abap-viewer-updated-note" content="Manual timestamp. Update this value by hand when code changes.">
+  <meta name="abap-viewer-version" content="v2026.02.25-r1">
+  <meta name="abap-viewer-updated-at" content="2026-02-25 10:30:00">
+  <meta name="abap-viewer-updated-note" content="Manual version/timestamp. Update these meta values by hand when code changes. Offline only.">
   <title>ABAP Parser Viewer</title>
   <style>
     :root {
