feat: add support for method call expression parsing
This change enhances the ABAP parser to better distinguish between standard assignments and method call expressions. It introduces specific logic to detect, parse, and extract values from method calls, including support for EXPORTING, IMPORTING, CHANGING, RECEIVING, and EXCEPTIONS parameters.

- Update matchesConfig to handle methodcallexpr match type
- Implement captureMethodCallExpressionValues for detailed parameter extraction
- Add buildCallMethodExprExtras to structure method call metadata
- Introduce helper functions for parsing raw method call strings
- Add logic for expanding PERFORM forms in the node structure (partial implementation)

--- a/viewer/index.html
+++ b/viewer/index.html
@@ -799,6 +799,7 @@
   <script src="./configs.generated/append.js" defer></script>
   <script src="./configs.generated/assignment.js" defer></script>
   <script src="./configs.generated/call-function.js" defer></script>
+  <script src="./configs.generated/call-method-expression.js" defer></script>
   <script src="./configs.generated/call-method.js" defer></script>
   <script src="./configs.generated/call-transaction.js" defer></script>
   <script src="./configs.generated/case.js" defer></script>
