--- a/viewer/index.html
+++ b/viewer/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="abap-viewer-version" content="v2026.02.25-r2">
-  <meta name="abap-viewer-updated-at" content="2026-02-25 23:14:23">
-  <meta name="abap-viewer-updated-note" content="Manual version/timestamp. Update these meta values by hand when code changes. Offline only.">
+  <meta name="abap-viewer-version" content="v2026.02.26-r1">
+  <meta name="abap-viewer-updated-at" content="2026-02-26 00:36:50">
+  <meta name="abap-viewer-updated-note" content="AI note: Added PATH_DECL synthetic fallback for Viewer/XML values and extras; finalDesc tech-id fallback order is declRef > identifier > value > name. Manual metadata only. Offline only.">
   <title>ABAP Parser Viewer</title>
   <style>
     :root {
